mobile overflow x issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -170,6 +170,11 @@
 body {
   font-family: 'inter', sans-serif;
   background-color: #010101;
+  overflow-x: hidden;
+}
+
+section {
+  overflow-x: hidden !important;
 }
 
 
